--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "__APP_NAME_58397D59__",
+  "name": "sort-any",
   "version": "1.0.0",
-  "description": "__DESCRIPTION_87A106F6__",
+  "description": "Sorts any JavaScript array in a predictable way (deep equal arrays are always sorted in the same order)",
   "main": "build/index.js",
   "scripts": {
     "build": "rm -rf build && babel src --out-dir build --ignore tests",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/__GITHUB_USER_7F71C1C7__/__APP_NAME_58397D59__.git"
+    "url": "git+https://github.com/oprogramador/sort-any.git"
   },
-  "keywords": [__KEYWORDS_7072626B__],
-  "author": "__AUTHOR_43D5B693__",
+  "keywords": ["sort", "any", "array", "object", "deep", "equal", "predictable"],
+  "author": "oprogramador",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/__GITHUB_USER_7F71C1C7__/__APP_NAME_58397D59__/issues"
+    "url": "https://github.com/oprogramador/sort-any/issues"
   },
-  "homepage": "https://github.com/__GITHUB_USER_7F71C1C7__/__APP_NAME_58397D59__#readme",
+  "homepage": "https://github.com/oprogramador/sort-any#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
