--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "sort-any",
   "version": "1.0.0",
   "description": "Sorts any JavaScript array in a predictable way (deep equal arrays are always sorted in the same order)",
-  "main": "build/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "rm -rf build && babel src --out-dir build --ignore tests",
     "create-project-symlink": "scripts/create-project-symlink.sh",
     "lint": "eslint src",
     "postinstall": "npm run create-project-symlink",
-    "prepublish": "npm run build",
-    "test": "mocha -r babel-register --recursive src/tests --timeout 5000"
+    "test": "mocha --recursive src/tests --timeout 5000"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oprogramador/sort-any.git"
   },
-  "keywords": ["sort", "any", "array", "object", "deep", "equal", "predictable"],
+  "keywords": [
+    "sort",
+    "any",
+    "array",
+    "object",
+    "deep",
+    "equal",
+    "predictable"
+  ],
   "author": "oprogramador",
   "license": "MIT",
   "bugs": {
@@ -23,10 +29,6 @@
   },
   "homepage": "https://github.com/oprogramador/sort-any#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
-    "babel-register": "^6.24.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-subset": "^1.5.0",
