--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "sinon": "^2.1.0",
     "sinon-as-promised": "^4.0.3",
     "sinon-chai": "^2.9.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
