--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Sorts any JavaScript array in a predictable way (deep equal arrays are always sorted in the same order)",
   "main": "src/index.js",
   "scripts": {
-    "create-project-symlink": "scripts/create-project-symlink.sh",
+    "build": "rm -rf build && babel src --out-dir build --ignore tests/",
     "lint": "eslint src",
-    "postinstall": "npm run create-project-symlink",
-    "test": "mocha --recursive src/tests --timeout 5000"
+    "prepublishOnly": "npm run build",
+    "test": "mocha -r babel-register --recursive src/tests --timeout 5000"
   },
   "repository": {
     "type": "git",
@@ -29,12 +29,18 @@
   },
   "homepage": "https://github.com/oprogramador/sort-any#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
+    "babel-register": "^6.24.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-subset": "^1.5.0",
     "dirty-chai": "^1.2.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-improved": "^2.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "mocha": "^3.2.0",
     "sinon": "^2.1.0",
     "sinon-as-promised": "^4.0.3",
