--- a/package.json
+++ b/package.json
@@ -56,7 +56,5 @@
     "sinon-as-promised": "^4.0.3",
     "sinon-chai": "^3.6.0"
   },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
+  "dependencies": {}
 }
